--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,14 @@ requirements:
     - setuptools
     - numpy >=1.3
 
+  test:
+    - python >=3.7
+    - setuptools
+    - numpy >=1.3
+    - flake8
+    - pytest
+    - pytest-env
+
 test:
   imports:
     - diffpy
